# list-fusion-lab

./: .gitignore  Benchmarks.hs  ListTestsTemplate.hs  MeasureCriterion.hs  MeasureNaive.hs  README.md  ReportToMean.hs  default.nix  driver.hs  list-fusion-lab.cabal
ListImpls/: BaseFrom76.hs  FusingFoldl.hs  System.hs  exports
impls/: BaseFrom76.hs  FusingFoldl.hs  System.hs  exports
test/: ListTestsTemplate.hs  driver.hs
